Update and rename pt1.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pt1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gibi Lei Maria da Penha</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +17,7 @@
         <source media="(max-width: 1000px)" srcset="imagens/img1.png" type="image/">
         <img src="img1.png" alt="imagem flexível">
     </picture>
-    <div><a href="https://www.catarse.me/gibilmp?fbclid=PAAabB2DUcl_nNSCc9SrYj1PfVgMCjMVUTaxkr1P1RH5FDM0q3CB1Ib9ukBBg"
+    <div><a href="https://www.catarse.me/gibilmp"
             target="_blank">
 
             <button style="
