--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gibi Lei Maria da Penha</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
     <h1>Conheça o Gibi Lei Maria da Penha</h1>
-    <p>Nesta história em quadrinhos emocionante e inspiradora, acompanhe as personagens em sua jornada para acabar com a
-        violência doméstica e lutar pelos direitos das mulheres. </p>
-    <picture>
-        <source media="(max-width: 1000px)" srcset="imagens/img1.png" type="image/">
-        <img src="img1.png" alt="imagem flexível">
-    </picture>
-    <div><a href="https://www.catarse.me/gibilmp"
+</header>
+    <main>
+    <p>Nesta história em quadrinhos emocionante e inspiradora, acompanhe as personagens em sua jornada para acabar com a violência doméstica e lutar pelos direitos das mulheres. </p>
+</main>
+<picture>
+    <source media="(max-width: 750px )" srcset="MariaDaPenha-P.png" type="image/png">
+    <source media="(max-width: 1000px )" srcset="MariaDaPenha-M.png" type="image/png">
+    <img src="MariaDaPenha-G.png" alt="Imagem Maria da Penha">
+</picture>
+
+    <div id="button">
+        <a href="https://www.catarse.me/gibilmp?fbclid=PAAabB2DUcl_nNSCc9SrYj1PfVgMCjMVUTaxkr1P1RH5FDM0q3CB1Ib9ukBBg"
             target="_blank">
 
             <button style="
             background-color: #F26463;
             color: #EFEFEF;
-            border-radius: 100px;
-            height: 64px;
-            width: 255px;
+            border-radius: 100px;  
             font-size: 20px;
             font-family: Arial, Helvetica, sans-serif;
             size: 20px;
@@ -33,11 +37,10 @@
             border-color: #F26463;
             padding: 0px, 40px, 0px, 40px;
             fill: solid;
-            position: absolute;
+            position: static;
             width: 255px;
             height: 64px;
-            left: 160px;
-            top: 542px;
+            margin: 1em 2em 2em 2em;
        ">
                 Quero conhecer!
             </button>
